<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="231dp"
        android:layout_height="178dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/vehicleNoTxt"
        android:layout_width="204dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:text="@string/vehicleNoTxt"
        android:textColor="#FF0000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInTxt" />

    <EditText
        android:id="@+id/vehicleNoEdt"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/vehicleNoEdt"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#78909C"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehicleNoTxt" />

    <TextView
        android:id="@+id/firstNameTxt"
        android:layout_width="204dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/passwordTxt"
        android:textColor="#FF0000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehicleNoEdt" />

    <EditText
        android:id="@+id/passwordEdt"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/passwordEdt"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#78909C"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTxt"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/signInBtn1"
        android:layout_width="114dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:text="@string/signInBtn"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdt"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/forgotPasswordBtn"
        android:layout_width="238dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:hapticFeedbackEnabled="false"
        android:text="@string/forgotPasswordBtn"
        android:textAllCaps="false"
        android:textColor="#696969"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn1" />

    <TextView
        android:id="@+id/haveAnAcctTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/dontHaveAnAcctTxt"
        android:textColor="#696969"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordBtn" />

    <Button
        android:id="@+id/signUpBtn2"
        android:layout_width="147dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/signUpBtn"
        android:textAllCaps="false"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/haveAnAcctTxt"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordBtn" />

    <TextView
        android:id="@+id/signInTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/signInTxt"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

</android.support.constraint.ConstraintLayout>