<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#000000"
    tools:context=".SignUp">

    <ScrollView
        android:layout_width="391dp"
        android:layout_height="776dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundTint="#000000"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo2"
                android:layout_width="231dp"
                android:layout_height="178dp"
                android:layout_marginTop="28dp"
                android:contentDescription="@string/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/signUpTxt"
                android:layout_width="131dp"
                android:layout_height="42dp"
                android:layout_marginTop="8dp"
                android:text="@string/signUpTxt"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.078"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo2" />

            <TextView
                android:id="@+id/firstNameTxt"
                android:layout_width="110dp"
                android:layout_height="29dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:text="@string/firstNameTxt"
                android:textColor="#FF0000"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/lastNameTxt"
                app:layout_constraintHorizontal_bias="0.013"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpTxt" />

            <EditText
                android:id="@+id/firstNameEdt"
                android:layout_width="168dp"
                android:layout_height="48dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#000000"
                android:ems="10"
                android:hint="@string/firstNameEdt"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#78909C"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/lastNameEdt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameTxt"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/lastNameTxt"
                android:layout_width="110dp"
                android:layout_height="29dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="80dp"
                android:text="@string/lastNameTxt"
                android:textColor="#FF0000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpTxt" />

            <EditText
                android:id="@+id/lastNameEdt"
                android:layout_width="168dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#000000"
                android:ems="10"
                android:hint="@string/lastNameEdt"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#78909C"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastNameTxt"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/phoneNumberTxt"
                android:layout_width="110dp"
                android:layout_height="29dp"
                android:layout_marginTop="8dp"
                android:text="@string/phoneNumberTxt"
                android:textColor="#FF0000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.074"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameEdt" />

            <EditText
                android:id="@+id/phoneNumberEdt"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#000000"
                android:ems="10"
                android:hint="@string/phoneNumberEdt"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textColor="#000000"
                android:textColorHint="#78909C"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberTxt" />

            <TextView
                android:id="@+id/vehicleNoTxt"
                android:layout_width="204dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:text="@string/vehicleNoTxt"
                android:textColor="#FF0000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.111"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberEdt" />

            <EditText
                android:id="@+id/vehicleNoEdt"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#000000"
                android:ems="10"
                android:hint="@string/vehicleNoEdt"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="#000000"
                android:textColorHint="#78909C"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vehicleNoTxt" />

            <TextView
                android:id="@+id/fuelTypeTxt"
                android:layout_width="204dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:text="@string/fuelTypeTxt"
                android:textColor="#FF0000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.111"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vehicleNoEdt" />

            <RadioGroup
                android:id="@+id/fuelTypeGroup"
                android:layout_width="350dp"
                android:layout_height="96dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fuelTypeTxt">

                <RadioButton
                    android:id="@+id/petrolEdt"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:buttonTint="#000000"
                    android:checked="true"
                    android:text="@string/petrolEdt"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/dieselEdt"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:buttonTint="#000000"
                    android:text="@string/dieselEdt"
                    android:textSize="18sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/newPasswordTxt"
                android:layout_width="204dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:text="@string/newPasswordTxt"
                android:textColor="#FF0000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.111"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fuelTypeGroup" />


            <EditText
                android:id="@+id/newPasswordEdt"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#000000"
                android:ems="10"
                android:hint="@string/newPasswordEdt"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textColorHint="#78909C"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newPasswordTxt"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/signUpBtn1"
                android:layout_width="114dp"
                android:layout_height="53dp"
                android:layout_marginTop="18dp"
                android:text="@string/signUpBtn"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="#FF0000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newPasswordEdt"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/haveAnAcctTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="1dp"
                android:text="@string/haveAnAcctTxt"
                android:textColor="#696969"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/signInBtn2"
                app:layout_constraintHorizontal_bias="0.972"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpBtn1" />

            <Button
                android:id="@+id/signInBtn2"
                android:layout_width="147dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="56dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/signInBtn"
                android:textAllCaps="false"
                android:textColor="#FF0000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpBtn1" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>